--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.css
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.css
@@ -1,9 +1,27 @@
+.btn-danger, .btn-success{
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
 .form-control:focus{
   border-color: #228B22;
   border-width: 2px;
   box-shadow: none;
 }
 
+.texto-form {
+  width: 100%;
+  font-family: sans-serif;
+  color: #424242;
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.form-group {
+  padding-left: 2%;
+  padding-right: 2%;
+}
 
 .custom-select:focus{
   border-color: #228B22;
@@ -14,7 +32,6 @@
 
 .custom-select option{
     background-color: #ffffff;
-
 }
 
 select:hover{
