--- a/src/app/components/vista-ordenes/vista-ordenes.component.html
+++ b/src/app/components/vista-ordenes/vista-ordenes.component.html
@@ -1,7 +1,8 @@
 <div class="card-body text-secondary">
-    <h1 class="card-title text-center">Órdenes</h1>
+    <h1 class="card-title text-center">Mis órdenes</h1>
+
     <div class="my-3">
-      <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['add-orden/add-orden.component']">Nueva Orden</button>
+      <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['/vista-ordenes/vista-orden-boton']">Nueva Orden</button>
     </div>
 
     <!--TABLA DE ÓRDENES-->
