cambios en vistas de ordenes

--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.html
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.html
@@ -52,8 +52,9 @@
         <label class="texto-form" for="exampleFormControlTextarea2">Observaciones a la hora de pagar al acreedor</label>
         <textarea class="form-control" id="exampleFormControlTextarea2" rows="3" placeholder="Escribe las observaciones que creas correspondientes"></textarea>
       </div>
-
     <br>
+      <a href="#"><img src="../../../../../assets/iconos/pdf.png" alt="Descargar orden pdf" width="80px"></a>
+    <br><br>
     <button class="btn btn-success" role="button" (click)="crearOrden()">Crear Orden</button>
     <button class="btn btn-danger" role="button" (click)="cancelar()">Cancelar</button>
     <br><br>
