--- a/src/app/components/vista-ordenes/vista-orden-boton/vista-orden-boton.component.html
+++ b/src/app/components/vista-ordenes/vista-orden-boton/vista-orden-boton.component.html
@@ -8,6 +8,6 @@
     </div>
 
     <div>
-      <button class="btn btn-rounded btn btn-danger" types="button" [routerLink] = "['/vista-ordenes']">Cancelar</button>
+      <button class="ml-5 btn btn-rounded btn btn-danger" types="button" [routerLink] = "['/vista-ordenes']">Cancelar</button>
     </div>
 </div>
