--- a/src/app/components/vista-ordenes/add-orden/gastos/gastos.component.html
+++ b/src/app/components/vista-ordenes/add-orden/gastos/gastos.component.html
@@ -2,7 +2,7 @@
     <h3 class="titulo-color card-title text-center">Relación de gastos</h3>
 
     <div class="my-3">
-      <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['/add-orden/gastos/form-gastos/form-gastos.component']">añadir gasto</button>
+      <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['/add-orden/gastos/form-gastos/form-gastos.component']">Añadir Gasto</button>
     </div>
 
 <!--TABLA GASTOS-->
