--- a/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
+++ b/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
@@ -1,25 +1,89 @@
-<div class="row">
-  <!-- PARTE IZQUIERDA -->
-  <div class="col-lg-6">
-    <div class="row">
 
-      <div class="col-md-6">
-        <label>Nombre</label>  
+ <div>  
+    <h3>Nombre completo del proyecto (acronimo) - Nº Contabilidad</h3> 
+
+    <span>Fecha Inicio - Fecha Fin</span> 
+  </div>
+<div class="row mt-4">
+ 
+   
+  <!-- PARTE IZQUIERDA -->
+  <div class="col-md-6">
+    <div class="row">
+      <div class="col-md-12">
+        <h5>Ordenes Pendientes</h5>
+        <table class="table table-bordered table-striped text-center">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">Fecha</th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Concepto</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>20-10-2018</td>
+              <td>Azahara Fernández Notario</td>
+              <td>Viaje a Londres</td>
+            </tr>
+            <tr>
+              <td>20-10-2018</td>
+              <td>Isabel Núñez de la Torre</td>
+              <td>Impresora</td>
+            </tr>
+            <tr>
+              <td>20-10-2018</td>
+              <td>Mercedes García Merayo</td>
+              <td>Comida RITSI</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+      <!--<div class="col-md-6">
+        <label>Fecha Ini</label>  
       </div>
               
       <div class="col-md-6">
         <label>Acronimo</label>          
-      </div>
+      </div>-->
 
 
-    </div>
+    
   </div>
 
 
   <!-- PARTE DERECHA -->
-  <div class="col-lg-5 ml-2 bg-secondary">
-  
-  Derecha
+  <div class="col-md-6">
+    <div class="row">
+      <div class="col-lg-12 ml-2">
+          <h5>Investigadores del Proyecto</h5>
+          <table class="table table-bordered table-striped text-center">
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col">Rol</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Azahara Fernández Notario</td>
+                <td>Miembro del proyecto</td>
+              </tr>
+              <tr>
+                <td>Isabel Núñez de la Torre</td>
+                <td>Miembro del proyecto</td>
+              </tr>
+              <tr>
+                <td>Mercedes García Merayo</td>
+                <td>Miembro del proyecto</td>
+              </tr>
+            </tbody>
+          </table>
+            
+      </div>
+    </div>
   </div>
   
 </div>
