--- a/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
+++ b/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
@@ -1,12 +1,13 @@
 
- <div>  
-    <h3>Nombre completo del proyecto (acronimo) - Nº Contabilidad</h3> 
+ <div>
+    <!--<h3>Nombre completo del proyecto (acronimo) - Nº Contabilidad</h3>-->
+    <h3>Proyecto: {{proyecto.acronimo}} - {{proyecto.nContabilidad}}</h3>
 
-    <span>Fecha Inicio - Fecha Fin</span> 
+    <span>{{proyecto.fechaInicio}} - {{proyecto.fechaCierre}}</span>
   </div>
 <div class="row mt-4">
- 
-   
+
+
   <!-- PARTE IZQUIERDA -->
   <div class="col-md-6">
     <div class="row">
@@ -42,15 +43,15 @@
     </div>
 
       <!--<div class="col-md-6">
-        <label>Fecha Ini</label>  
+        <label>Fecha Ini</label>
       </div>
-              
+
       <div class="col-md-6">
-        <label>Acronimo</label>          
+        <label>Acronimo</label>
       </div>-->
 
 
-    
+
   </div>
 
 
@@ -81,23 +82,9 @@
               </tr>
             </tbody>
           </table>
-            
+
       </div>
     </div>
   </div>
-  
+
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
