--- a/src/app/components/vista-ordenes/vista-ordenes.component.html
+++ b/src/app/components/vista-ordenes/vista-ordenes.component.html
@@ -14,9 +14,10 @@
         <div class="col">
             <select class="form-control form-control-sm">
               <option selected>Seleccione Estado</option>
-              <option value="aprobada">Aprobada</option>
-              <option value="cancelada">Cancelada</option>
-              <option value="espera">Espera</option>
+              <option value="aceptadas">Aceptadas</option>
+              <option value="pendientes">Pendientes</option>
+              <option value="canceladas">Canceladas</option>
+              <option value="devueltas">Devueltas</option>
             </select>
         </div>
     </div>
