--- a/src/app/components/vista-ordenes/add-orden/gastos/gastos.component.html
+++ b/src/app/components/vista-ordenes/add-orden/gastos/gastos.component.html
@@ -1,12 +1,12 @@
-<div class="card-body text-secondary">
+<!--<div class="card-body text-secondary">
     <h3 class="titulo-color card-title text-center">Relación de gastos</h3>
 
     <div class="my-3">
       <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['/add-orden/gastos/form-gastos/form-gastos.component']">Añadir Gasto</button>
     </div>
-
+-->
 <!--TABLA GASTOS-->
-    <table class="table table-bordered table-striped text-center">
+<!--   <table class="table table-bordered table-striped text-center">
       <thead class="thead-dark">
         <tr>
           <th>Tipo</th>
@@ -35,4 +35,79 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </div> -->
+
+  <div class="card-body">
+
+            <form class="card mb-4"  [formGroup]="formGastos" >
+              <h3 class="texto-form mt-3">Relación de gastos</h3>
+              <!-- Entradas simples -->
+            <div class="form-group">
+                <label for="descripcion">Partida de Gastos</label>
+                <textarea type="text" class="form-control" formControlName="descripcion" id="descripcion" name="descripcion" rows="5" placeholder="Descripción (Máx 150 caracteres)" maxlength="150"></textarea>
+                <div class="alerta">
+                  <small *ngIf="false">No puede estar vacio <br></small>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <div class="row">
+                  <div class="col-md-6">
+                    <label class ="tx-secondary" for="importe">Importe</label>
+                    <input type="text" class="form-control" formControlName="importe" name="importe" id="importe" placeholder="Importe" >
+                    <div class="alerta">
+                      <small *ngIf="false">No puede estar vacio <br></small>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <label for="nFactura">Nº de Factura</label>
+                    <input type="text" class="form-control" formControlName="nFactura" name="nFactura" id="nFactura" placeholder="Nº de Factura">
+                    <div class="alerta">
+                      <small *ngIf="false">No puede estar vacio <br></small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="form-group">
+                <label for="imagen">Adjuntar Imagen</label>
+                <input type="file" class="form-control-file" id="imagen">
+              </div>
+              <div class="form-group">
+                <button class="btn btn-rounded btn btn-success m-0" types="button" (click)="anadirGasto()">Añadir Gasto</button>
+              </div>
+            </form>
+
+        <!--TABLA GASTOS-->
+            <table class="table table-bordered table-striped text-center">
+              <thead class="thead-dark">
+                <tr>
+                  <th scope="col">Nº Factura</th>
+                  <th>Concepto</th>
+                  <th>Importe</th>
+                  <th>Imagen</th>
+                  <th>Eliminar</th>
+                </tr>
+              </thead>
+
+              <tbody>
+                <tr *ngFor="let gasto of gastos">
+                  <td>{{ gasto.nFactura}}</td>
+                  <td>{{ gasto.descripcion }}</td>
+                  <td>{{ gasto.importe}}</td>
+                  <td><!--Ver foto gasto-->
+
+                    <button type="button" class="btn btn-link" name="button">
+                      <img src="assets/iconos/editar.png" class="rounded" alt="Editar Acreedor">
+                    </button>
+                  </td>
+                  <td>
+                    <button type="button" class="btn btn-link" name="button" (click)='eliminarGasto(gasto)' >
+                      <img src="assets/iconos/papelera.png" class="rounded" alt="Eliminar gasto">
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
