vista tabla gastos adaptada al tamaño, solucionado error de descripcion fuera

--- a/src/app/components/vista-ordenes/add-orden/gastos/gastos.component.css
+++ b/src/app/components/vista-ordenes/add-orden/gastos/gastos.component.css
@@ -10,6 +10,10 @@
   margin-bottom: 10px;
 }
 
+.maximoAncho {
+  max-width: 500px;
+}
+
 .form-control:focus{
   border-color: #228B22;
   border-width: 2px;
