--- a/src/app/components/vista-ordenes/add-orden/gastos/gastos.component.html
+++ b/src/app/components/vista-ordenes/add-orden/gastos/gastos.component.html
@@ -44,7 +44,7 @@
               <!-- Entradas simples -->
             <div class="form-group">
                 <label for="descripcion">Partida de Gastos</label>
-                <textarea type="text" class="form-control" formControlName="descripcion" id="descripcion" name="descripcion" rows="5" placeholder="Descripción (Máx 150 caracteres)" maxlength="150"></textarea>
+                <textarea type="text" class="form-control" formControlName="descripcion" id="descripcion" name="descripcion" rows="5" placeholder="Descripción (Máx 150 caracteres)" maxlength="200"></textarea>
                 <div class="alerta">
                   <small *ngIf="false">No puede estar vacio <br></small>
                 </div>
@@ -94,7 +94,7 @@
               <tbody>
                 <tr *ngFor="let gasto of gastos">
                   <td>{{ gasto.nFactura}}</td>
-                  <td>{{ gasto.descripcion }}</td>
+                  <td class="maximoAncho">{{ gasto.descripcion }}</td>
                   <td>{{ gasto.importe}}</td>
                   <td><!--Ver foto gasto-->
 
